--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -3,50 +3,58 @@ name: Build and Release
 on:
   push:
     tags:
-      - '*'
+      - 'v*' 
 
 jobs:
-  build:
+  build-and-release:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        arch: [amd64]
+        go_version: [1.17.x]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17
-      - name: Build
-        run: |
-          VERSION=$(git describe --tags)
-          echo "Building version $VERSION"
-          go build -o CloudSonic-$VERSION-$GOOS-$GOARCH
-      - name: Archive artifacts
+          go-version: ${{ matrix.go_version }}
+      - name: Build app
+        run: go build -o CloudSonic -v
+      - name: Create release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: Automated release created by GitHub Actions
+          draft: false
+          prerelease: false
+      - name: Upload Windows binary
         uses: actions/upload-artifact@v2
         with:
-          name: CloudSonic binary
-          path: CloudSonic-$VERSION-$GOOS-$GOARCH
-
-  upload-release:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Setup Go
-        uses: actions/setup-go@v2
+          name: CloudSonic-Windows-amd64
+          path: CloudSonic.exe
+          if: matrix.os == 'windows-latest'
+      - name: Upload Mac binary
+        uses: actions/upload-artifact@v2
         with:
-          go-version: 1.16
-      - name: Install ghr
-        run: go get -u github.com/tcnksm/ghr
-      - name: Download artifacts
-        uses: actions/download-artifact@v2
+          name: CloudSonic-MacOS-amd64
+          path: CloudSonic
+          if: matrix.os == 'macos-latest'
+      - name: Upload Linux binary
+        uses: actions/upload-artifact@v2
         with:
-          name: CloudSonic binary
-      - name: Upload release
+          name: CloudSonic-Linux-amd64
+          path: CloudSonic
+          if: matrix.os == 'ubuntu-latest'
+      - name: Get version from tag
         run: |
-          echo "Uploading release for version $VERSION"
-          ghr --username ${{ github.actor }} --repo CloudSonic --token ${{ secrets.GITHUB_TOKEN }} --replace $VERSION CloudSonic-$VERSION-$GOOS-$GOARCH
+          export VERSION=$(echo "${{ github.ref }}" | sed 's/^refs\/tags\///')
+          echo "Version: $VERSION"
+      - name: Upload versioned binary
+        uses: actions/upload-artifact@v2
+        with:
+          name: CloudSonic-$VERSION-${{ matrix.os }}
+          path: CloudSonic
