--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -16,6 +16,8 @@ jobs:
     - name: Get version from tag
       id: get_version
       run: echo ::set-output name=version::$(git describe --tags)
+    - name: Get current tag
+      run: echo ::set-env name=version::$(git describe --tags)
     - name: Build for Windows
       run: env GOOS=windows GOARCH=amd64 go build -o CloudSonic-windows-amd64.exe main.go
     - name: Build for macOS
@@ -28,8 +30,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: ${{ env.VERSION }}
+        release_name: Release ${{ env.VERSION }}
         body: ""
         draft: false
         prerelease: false
