--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -6,56 +6,66 @@ on:
       - main
 
 jobs:
-  build-and-release:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      
-      - name: Get latest tag
-        id: tag
-        uses: actions-ecosystem/action-get-latest-tag@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Set version
-        run: echo "VERSION=${{ steps.tag.outputs.tag_name }}" >> $GITHUB_ENV
-      
-      - name: Build for Windows
-        run: env GOOS=windows GOARCH=amd64 go build -o CloudSonic-windows-amd64.exe main.go
-      
-      - name: Build for Mac
-        run: env GOOS=darwin GOARCH=amd64 go build -o CloudSonic-darwin-amd64 main.go
-      
-      - name: Build for Linux
-        run: env GOOS=linux GOARCH=amd64 go build -o CloudSonic-linux-amd64 main.go
-      
-      - name: Create Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.tag.outputs.tag_name }}
-          release_name: Release ${{ steps.tag.outputs.tag_name }}
-          body: |
-            Release ${{ steps.tag.outputs.tag_name }}
-          draft: false
-          prerelease: false
-      
-      - name: Upload Windows Binary
-        uses: actions/upload-artifact@v2
-        with:
-          name: CloudSonic-windows-amd64
-          path: CloudSonic-windows-amd64.exe
-      
-      - name: Upload Mac Binary
-        uses: actions/upload-artifact@v2
-        with:
-          name: CloudSonic-darwin-amd64
-          path: CloudSonic-darwin-amd64
-      
-      - name: Upload Linux Binary
-        uses: actions/upload-artifact@v2
-        with:
-          name: CloudSonic-linux-amd64
-          path: CloudSonic-linux-amd64
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Get latest tag
+      id: latest-tag
+      uses: actions-ecosystem/action-get-latest-tag@v1
+
+    - name: Build for Linux
+      run: |
+        env GOOS=linux GOARCH=amd64 go build -o CloudSonic-linux
+
+    - name: Build for Windows
+      run: |
+        env GOOS=windows GOARCH=amd64 go build -o CloudSonic-windows.exe
+
+    - name: Build for macOS
+      run: |
+        env GOOS=darwin GOARCH=amd64 go build -o CloudSonic-macos
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ steps.latest-tag.outputs.tag }}
+        release_name: Release ${{ steps.latest-tag.outputs.tag }}
+        body: Release ${{ steps.latest-tag.outputs.tag }}
+      if: startsWith(github.ref, 'refs/tags/')
+    
+    - name: Upload Linux Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./CloudSonic-linux
+        asset_name: CloudSonic-linux
+        asset_content_type: application/octet-stream
+    
+    - name: Upload Windows Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./CloudSonic-windows.exe
+        asset_name: CloudSonic-windows.exe
+        asset_content_type: application/octet-stream
+    
+    - name: Upload macOS Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./CloudSonic-macos
+        asset_name: CloudSonic-macos
+        asset_content_type: application/octet-stream
