--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -1,71 +1,59 @@
 name: Build and Release
-
 on:
   push:
     branches:
       - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout
+    - name: Checkout code
       uses: actions/checkout@v2
-
-    - name: Get latest tag
-      id: latest-tag
-      uses: actions-ecosystem/action-get-latest-tag@v1
-
-    - name: Build for Linux
-      run: |
-        env GOOS=linux GOARCH=amd64 go build -o CloudSonic-linux
-
+    - name: Setup Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: '1.17'
     - name: Build for Windows
-      run: |
-        env GOOS=windows GOARCH=amd64 go build -o CloudSonic-windows.exe
-
+      run: env GOOS=windows GOARCH=amd64 go build -o CloudSonic-windows-amd64.exe main.go
     - name: Build for macOS
-      run: |
-        env GOOS=darwin GOARCH=amd64 go build -o CloudSonic-macos
-
+      run: go build -o CloudSonic-macos-amd64 main.go
+    - name: Build for Linux
+      run: go build -o CloudSonic-linux-amd64 main.go
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1.0.0
+      uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ steps.latest-tag.outputs.tag }}
-        release_name: Release ${{ steps.latest-tag.outputs.tag }}
-        body: Release ${{ steps.latest-tag.outputs.tag }}
-      if: startsWith(github.ref, 'refs/tags/')
-    
-    - name: Upload Linux Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./CloudSonic-linux
-        asset_name: CloudSonic-linux
-        asset_content_type: application/octet-stream
-    
+        tag_name: ${{ github.ref_name }}
+        release_name: Release ${{ github.ref_name }}
+        body: ""
+        draft: false
+        prerelease: false
     - name: Upload Windows Release Asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./CloudSonic-windows.exe
-        asset_name: CloudSonic-windows.exe
+        asset_path: ./CloudSonic-windows-amd64.exe
+        asset_name: CloudSonic-windows-amd64.exe
         asset_content_type: application/octet-stream
-    
     - name: Upload macOS Release Asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./CloudSonic-macos
-        asset_name: CloudSonic-macos
+        asset_path: ./CloudSonic-macos-amd64
+        asset_name: CloudSonic-macos-amd64
+        asset_content_type: application/octet-stream
+    - name: Upload Linux Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./CloudSonic-linux-amd64
+        asset_name: CloudSonic-linux-amd64
         asset_content_type: application/octet-stream
